--- a/client/package.json
+++ b/client/package.json
@@ -20,32 +20,31 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
-    "@angular/http": "^7.2.6",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/platform-server": "^7.2.6",
+    "@angular/platform-server": "^8.0.0",
     "@angular/router": "~7.2.0",
-    "@nguniversal/express-engine": "^7.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
+    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-    "ts-loader": "^5.3.3",
+    "ts-loader": "^6.0.2",
     "tslib": "^1.9.0",
-    "webpack-cli": "^3.2.3",
+    "webpack-cli": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.3",
+    "@angular/cli": "~7.3.6",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
+    "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
