--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "build:client-and-server-bundles": "ng build --prod && ng run client:server:production",
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-    "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build --prod && ng run client:server:production"
+    "build:prerender": "npm run build:ssr && node dist/prerender"
   },
   "private": true,
   "dependencies": {
